--- a/src/component/main/homepage.ejs
+++ b/src/component/main/homepage.ejs
@@ -1,1 +1,23 @@
-<%- include('./search_tab.ejs')%>
+<div class="homepage_all">
+
+    <div class="etc_box">
+        <div class="etc_img">
+            <img src="#">
+        </div>
+        <div class="etc_text">
+            <span class="up">海天国际培训机构</span>
+            <div class="down">
+                <span class="text_tt">
+                    <img src="#">
+                    <span class="text_down">课程<span class="num">299</span>节</span>
+                </span>
+                <span class="text_tt">
+                    <img src="#">
+                    <span class="text_down">老师<span class="num">99</span>人</span>
+                </span>
+             </div>
+        </div>
+    </div>
+
+
+</div>
