--- a/src/component/main/homepage.ejs
+++ b/src/component/main/homepage.ejs
@@ -1,23 +1,93 @@
+<!--导航-->
+<nav class="top_nav_main">
+    <div class="none_box_nav"></div>
+    <div class="top_nav">
+        <a href="#" class="left"><img src="../../images/basic/nav_left_icon.png"></a>
+        <p class="center">员工培训</p>
+        <a href="#" class="right"></a>
+    </div>
+</nav>
+
+
 <div class="homepage_all">
 
-    <div class="etc_box">
+    <a class="etc_box" href="../company/company_home.html">
         <div class="etc_img">
-            <img src="#">
+            <img src="../../images/show.png">
         </div>
         <div class="etc_text">
             <span class="up">海天国际培训机构</span>
             <div class="down">
                 <span class="text_tt">
-                    <img src="#">
+                    <img src="../../../images/main/book.png">
                     <span class="text_down">课程<span class="num">299</span>节</span>
                 </span>
                 <span class="text_tt">
-                    <img src="#">
+                    <img src="../../../images/main/teacher.png">
                     <span class="text_down">老师<span class="num">99</span>人</span>
                 </span>
              </div>
         </div>
-    </div>
+    </a>
+
+
+    <a class="etc_box" href="../company/company_home.html">
+        <div class="etc_img">
+            <img src="../../images/show.png">
+        </div>
+        <div class="etc_text">
+            <span class="up">海天国际培训机构</span>
+            <div class="down">
+                <span class="text_tt">
+                    <img src="../../../images/main/book.png">
+                    <span class="text_down">课程<span class="num">299</span>节</span>
+                </span>
+                <span class="text_tt">
+                    <img src="../../../images/main/teacher.png">
+                    <span class="text_down">老师<span class="num">99</span>人</span>
+                </span>
+            </div>
+        </div>
+    </a>
+
+
+    <a class="etc_box" href="../company/company_home.html">
+        <div class="etc_img">
+            <img src="../../images/show.png">
+        </div>
+        <div class="etc_text">
+            <span class="up">海天国际培训机构</span>
+            <div class="down">
+                <span class="text_tt">
+                    <img src="../../../images/main/book.png">
+                    <span class="text_down">课程<span class="num">299</span>节</span>
+                </span>
+                <span class="text_tt">
+                    <img src="../../../images/main/teacher.png">
+                    <span class="text_down">老师<span class="num">99</span>人</span>
+                </span>
+            </div>
+        </div>
+    </a>
+
 
 
 </div>
+
+<!--底部导航-->
+<nav class="bottom_nav_main">
+    <div class="none_bottom_nav"></div>
+    <div class="bottom_nav">
+        <!--蓝色：nav_blue；灰色：nav_gray；-->
+        <a class="home nav_blue" href="#">
+            <img src="../../images/basic/homepage_nav_blue.png" class="nav_blue">
+            <img src="../../images/basic/homepage_nav_gray.png" class="nav_gray">
+            <span>首页</span>
+        </a>
+        <a class="about nav_gray" href="#">
+            <img src="../../images/basic/about_gray.png" class="nav_gray">
+            <img src="../../images/basic/about_blue.png" class="nav_blue">
+            <span>关于</span>
+        </a>
+    </div>
+</nav>
