--- a/src/view/train/employee_training.ejs
+++ b/src/view/train/employee_training.ejs
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<!--员工培训主页-->
+<!--员工培训介绍-->
 
-<%- include('../../component/main/homepage.ejs')%>
+<%- include('../../component/train/employee_training.ejs')%>
 
 
 </body>
