--- a/src/component/main/homepage.less
+++ b/src/component/main/homepage.less
@@ -2,8 +2,11 @@
   width: 100%;
   //height: 100%;
   padding-top: 10px;
+  font-size: 0;
   .etc_box{
+    display: block;
     margin: 0 auto;
+    margin-bottom: 10px;
     width: 350px;
     background: #ffffff;
     border-radius: 8px;
@@ -25,8 +28,9 @@
         font-weight: bold;
       }
       .down{
+        margin-top: 4px;
         .text_tt{
-          font-weight: bold;
+          //font-weight: bold;
           display: inline-block;
           img{
             width: 20px;
