--- a/src/component/company/company_home.ejs
+++ b/src/component/company/company_home.ejs
@@ -2,22 +2,21 @@
 <nav class="top_nav_main">
     <div class="none_box_nav"></div>
     <div class="top_nav">
-        <a href="#" class="left"><img src="../../images/basic/nav_left_icon.png"></a>
+        <a href="" onclick="goBack()" class="left"><img src="../../images/basic/nav_left_icon.png"></a>
         <p class="center">海天国际培训机构</p>
         <a href="#" class="right"></a>
     </div>
 </nav>
 
-
-<div class="company_all">
-    <div class="company_top_box">
-        <!--选中蓝色 添加class值："choose"；-->
-        <a href="#" class="company_nav choose">机构简介</a>
-        <a href="#" class="company_nav">机构课程</a>
-    </div>
-
+<!--导航-->
+<div class="company_top_box">
+    <!--选中蓝色 添加class值："choose"；-->
+    <a href="#" class="company_nav choose">机构简介</a>
+    <a href="#" class="company_nav ">机构课程</a>
+</div>
+<!--机构介绍-->
+<div class="company_all" style="display: block;">
     <div class="img_bg">
-
         <img src="../../images/show.png">
 
         <div class="inf_box">
@@ -25,8 +24,320 @@
             <p class="text_in">北京海天伟业文化发展有限公司（简称“海天国际”）创建于1998年，是国内第一批教育培训商业机构，作为一家先行的管理培训专业公司，至今已拥有20年坚实的行业实践历程。秉承“智慧引领成功、学习成就未来”的核心理念，经过二十年的稳步发展，“海天”已经成为中国管理培训业唯一一家集远程教育标准体系...</p>
         </div>
     </div>
+    <!--简介-->
+    <div class="company_bb">
+        <div class="introduce-2 insde_box">
+            <div class="introduce_one">
+                <img class="square" src="../../../images/basic/blue_square.png">
+                <p class="introduce_one_top"> "ELMP(e起来·云学习管理平台)"简介</p>
+            </div>
+            <ul type="none">
+                <li ><span class="insde_tit1">平台优势</span></li>
+                <li class="insde_text">功能强大、模块齐全、性能稳定。快速创建虚拟教室，实现培训课程发布、员工在线学习、心得交流、状态跟踪、用户管理、课程管理、培训流程管理、考试考核、角色权限、统计分析等功能模块，涵盖教育培训的方方面面。</li>
+                <li ><span class="insde_tit2">平台特色</span></li>
+                <li class="table_box">
+                   <table>
+                       <tr class="table_line">
+                           <td class="table_tit">功能最多</td>
+                           <td class="table_text">课件、训练、作业、考试、反馈、答疑、案例、评估等学习核心功能</td>
+                       </tr>
+                       <tr class="table_line">
+                           <td class="table_tit">跟踪最细</td>
+                           <td class="table_text">学员登录次数、学习课时、学习进度、作业、成绩、排名等全面跟踪。</td>
+                       </tr>
+                       <tr class="table_line">
+                           <td class="table_tit">互动性好</td>
+                           <td class="table_text">支持案例分析、心得分享、调查反馈等</td>
+                       </tr>
+                       <tr class="table_line">
+                           <td class="table_tit">学习目标全</td>
+                           <td class="table_text">允许设定课时、结业成绩、平时成绩等多个考核目标</td>
+                       </tr>
+                       <tr class="table_line">
+                           <td class="table_tit">内容更丰富</td>
+                           <td class="table_text">可导入各种外部课件，也可用本平台自带的课件开发工具开发多媒体课件</td>
+                       </tr>
 
+                       <tr class="table_line">
+                           <td class="table_tit">安全性更高</td>
+                           <td class="table_text">提供课件安全发布和保密技术，防止未授权访问</td>
+                       </tr>
+                   </table>
+                </li>
+            </ul>
+        </div>
 
+        <div class="introduce-2 insde_box">
+            <div class="introduce_one">
+                <img class="square" src="../../../images/basic/blue_square.png">
+                <p class="introduce_one_top"> 常见问题</p>
+            </div>
+            <ul class="" type="none">
+                <li class="q_a_line" style="">
+                    <span class="insde_tit3">问题1：这里是问题1的标题</span>
+                    <span class="insde_text3">答案1：这里是问题1的答案内容。答案1：这里是问题1的答案内容。</span>
+                </li>
+                <li class="q_a_line" style="">
+                    <span class="insde_tit3">问题2：这里是问题2的标题</span>
+                    <span class="insde_text3">答案2：这里是问题2的答案内容。答案2：这里是问题2的答案内容。</span>
+                </li>
 
+            </ul>
+        </div>
+    </div>
 
 </div>
+<!--机构课程-->
+<div class="company_class" style="display: none;">
+    <!--二级导航-->
+    <div class="company_top_min">
+        <!--选中添加class:choose_min-->
+        <span class="min_1 choose_min">战略管理</span>
+        <span class="min_2">营销管理</span>
+        <span class="min_3">人力资源管理</span>
+        <span class="min_4">管理技能提升</span>
+        <span class="min_5">财务管理</span>
+        <span class="min_6">生产管理</span>
+        <span class="min_7">职业素养管理</span>
+        <span class="min_8">客户服务</span>
+    </div>
+    <div class="min_box min_1">
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+    </div>
+
+    <div class="min_box min_2" style="display: none">
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+    </div>
+
+    <div class="min_box min_3" style="display: none">
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+    </div>
+
+    <div class="min_box min_4" style="display: none">
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+    </div>
+
+    <div class="min_box min_5" style="display: none">
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+    </div>
+
+    <div class="min_box min_6" style="display: none">
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+    </div>
+
+    <div class="min_box min_7" style="display: none">
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+    </div>
+
+    <div class="min_box min_8" style="display: none">
+        <!--行-->
+        <span class="in_line_box">
+            <span class="in_left">
+                <img src="../../images/main/in_box_img.png">
+                <span>
+                    <span>塑造优质企业文化</span>
+                    <span>古代文化经典与现代创新经营</span>
+                </span>
+            </span>
+            <span class="in_right">
+                <img src="../../images/main/teacher_name_icon.png">
+                <span class="in_right_name">张家麟</span>
+            </span>
+        </span>
+    </div>
+
+</div>
+
+<script>
+    var company_btn = document.getElementsByClassName('company_nav');
+
+    for(var index = 0; index<company_btn.length;index++){
+        company_btn[index].addEventListener('click',function () {
+
+            if(event.currentTarget.innerText == '机构简介'){
+                if(document.getElementsByClassName('company_all')[0].style.display == 'none'){
+                    document.getElementsByClassName('company_nav')[0].classList.add('choose');
+                    document.getElementsByClassName('company_nav')[1].classList.remove('choose');
+                    document.getElementsByClassName('company_all')[0].style.display = 'block';
+                    document.getElementsByClassName('company_class')[0].style.display = 'none';
+                }
+            }else if(event.currentTarget.innerText == '机构课程'){
+                if(document.getElementsByClassName('company_class')[0].style.display == 'none'){
+                    document.getElementsByClassName('company_nav')[1].classList.add('choose');
+                    document.getElementsByClassName('company_nav')[0].classList.remove('choose');
+                    document.getElementsByClassName('company_all')[0].style.display = 'none';
+                    document.getElementsByClassName('company_class')[0].style.display = 'block';
+                }
+            }
+
+        })
+    }
+
+    var company_type_btn = document.getElementsByClassName('company_top_min')[0].getElementsByTagName('span');
+    var min_box = document.getElementsByClassName('min_box');
+
+    for(var index = 0;index < company_type_btn.length;index++){
+        company_type_btn[index].addEventListener('click',function () {
+            if(!event.currentTarget.classList.contains('choose_min')){
+                document.getElementsByClassName('choose_min')[0].classList.remove('choose_min');
+                event.currentTarget.classList.add('choose_min');
+                var min_box_class = event.currentTarget.getAttribute('class').split(' ')[0];
+                for(var j = 0;j<min_box.length;j++){
+                    min_box[j].style.display = 'none';
+                }
+                document.getElementsByClassName(min_box_class)[1].style.display = 'block';
+            }
+        })
+    }
+</script>
