--- a/src/component/main/homepage.ejs
+++ b/src/component/main/homepage.ejs
@@ -2,7 +2,7 @@
 <nav class="top_nav_main">
     <div class="none_box_nav"></div>
     <div class="top_nav">
-        <a href="#" class="left"><img src="../../images/basic/nav_left_icon.png"></a>
+        <a href="" onclick="goBack()" class="left"><img src="../../images/basic/nav_left_icon.png"></a>
         <p class="center">员工培训</p>
         <a href="#" class="right"></a>
     </div>
@@ -79,12 +79,12 @@
     <div class="none_bottom_nav"></div>
     <div class="bottom_nav">
         <!--蓝色：nav_blue；灰色：nav_gray；-->
-        <a class="home nav_blue" href="#">
+        <a class="home nav_blue" href="homepage.html">
             <img src="../../images/basic/homepage_nav_blue.png" class="nav_blue">
             <img src="../../images/basic/homepage_nav_gray.png" class="nav_gray">
             <span>首页</span>
         </a>
-        <a class="about nav_gray" href="#">
+        <a class="about nav_gray" href="../train/employee_training.html">
             <img src="../../images/basic/about_gray.png" class="nav_gray">
             <img src="../../images/basic/about_blue.png" class="nav_blue">
             <span>关于</span>
