--- a/src/component/train/employee_training.ejs
+++ b/src/component/train/employee_training.ejs
@@ -3,7 +3,7 @@
 <nav class="top_nav_main">
     <div class="none_box_nav"></div>
     <div class="top_nav">
-        <a href="#" class="left"><img src="../../images/basic/nav_left_icon.png"></a>
+        <a href="" onclick="goBack()" class="left"><img src="../../images/basic/nav_left_icon.png"></a>
         <p class="center">员工培训</p>
         <a href="#" class="right"></a>
     </div>
@@ -16,11 +16,11 @@
         <p class="introduce_one_top">员工培训介绍</p>
     </div>
     <ul type="none">
-        <li>1.介绍企业的经营历史、规模和发展前景，激励员工积极工作，为企业的繁荣作贡献</li>
-        <li>2. 介绍公司的规章制度和岗位职责，使员工们在工作中自觉地遵守公司的规章，一切工作按公司制定出来的规则、标准、程序、制度办理。</li>
-        <li>3. 介绍企业内部的组织结构、权力系统，各部门之间的服务协调网络及流程，有关部门的处理反馈机制。</li>
-        <li>4. 业务培训，使新员工熟悉并掌握完成各自本职工作所需的主要技能和相关信息，从而迅速胜任工作；</li>
-        <li>5. 介绍企业的经营范围、主要产品、市场定位、目标顾客、竞争
+        <li class="emp_line">1.介绍企业的经营历史、规模和发展前景，激励员工积极工作，为企业的繁荣作贡献</li>
+        <li class="emp_line">2. 介绍公司的规章制度和岗位职责，使员工们在工作中自觉地遵守公司的规章，一切工作按公司制定出来的规则、标准、程序、制度办理。</li>
+        <li class="emp_line">3. 介绍企业内部的组织结构、权力系统，各部门之间的服务协调网络及流程，有关部门的处理反馈机制。</li>
+        <li class="emp_line">4. 业务培训，使新员工熟悉并掌握完成各自本职工作所需的主要技能和相关信息，从而迅速胜任工作；</li>
+        <li class="emp_line">5. 介绍企业的经营范围、主要产品、市场定位、目标顾客、竞争
             环境等等，增强新员工的市场意识；</li>
     </ul>
 </div>
@@ -30,13 +30,29 @@
         <p class="introduce_one_top">员工培训使用介绍</p>
     </div>
     <ul type="none">
-        <li>1. 不脱产的一般文化培训如电视大学、函授班、夜大等继续完成初中、高中、大专的等学历教育。</li>
-        <li>2. 岗位培训根据每个岗位的上岗要求不同，开展操作性和资格性培训。</li>
-        <li>3. 专题培训为了提升员工的专业技能和视野等，开展有针对性的新设备、新工艺、新管理方法、意识培训等。  </li>
-        <li>4. 脱产培训将员工送到大专院校或科研机构，或者其他大公司实施脱产的学习。</li>
-        <li> 5. 首先要设立企业的培训负责部门，并且在下属部门设定专职或兼职的培训联络员。建立培训管理工作网络。</li>
-        <li>6. 一定要区分与激励性培训的差异。</li>
+        <li class="emp_line">1. 不脱产的一般文化培训如电视大学、函授班、夜大等继续完成初中、高中、大专的等学历教育。</li>
+        <li class="emp_line">2. 岗位培训根据每个岗位的上岗要求不同，开展操作性和资格性培训。</li>
+        <li class="emp_line">3. 专题培训为了提升员工的专业技能和视野等，开展有针对性的新设备、新工艺、新管理方法、意识培训等。  </li>
+        <li class="emp_line">4. 脱产培训将员工送到大专院校或科研机构，或者其他大公司实施脱产的学习。</li>
+        <li class="emp_line">5. 首先要设立企业的培训负责部门，并且在下属部门设定专职或兼职的培训联络员。建立培训管理工作网络。</li>
+        <li class="emp_line">6. 一定要区分与激励性培训的差异。</li>
     </ul>
 </div>
 
-
+<!--底部导航-->
+<nav class="bottom_nav_main">
+    <div class="none_bottom_nav"></div>
+    <div class="bottom_nav">
+        <!--蓝色：nav_blue；灰色：nav_gray；-->
+        <a class="home nav_gray" href="../main/homepage.html">
+            <img src="../../images/basic/homepage_nav_blue.png" class="nav_blue">
+            <img src="../../images/basic/homepage_nav_gray.png" class="nav_gray">
+            <span>首页</span>
+        </a>
+        <a class="about nav_blue" href="../train/employee_training.html">
+            <img src="../../images/basic/about_gray.png" class="nav_gray">
+            <img src="../../images/basic/about_blue.png" class="nav_blue">
+            <span>关于</span>
+        </a>
+    </div>
+</nav>
