--- a/src/component/main/homepage.less
+++ b/src/component/main/homepage.less
@@ -7,17 +7,18 @@
     display: block;
     margin: 0 auto;
     margin-bottom: 10px;
-    width: 350px;
+    width: 90%;
     background: #ffffff;
     border-radius: 8px;
     padding: 15px 0;
     .etc_img{
-      width: 320px;
+      width: 90%;
       height: calc(~"100vw / 640 * 256");
       margin: 0 auto;
       img{
         width: 100%;
         height: calc(~"100vw / 640 * 256");
+        border-radius: 8px;
       }
     }
     .etc_text{
