修正课程列表页文本溢出[11.14]
修正课程列表页文本溢出[11.14]

--- a/src/component/company/company_home.ejs
+++ b/src/component/company/company_home.ejs
@@ -28,7 +28,7 @@
     <div class="company_bb">
         <div class="introduce-2 insde_box">
             <div class="introduce_one">
-                <img class="square" src="../../../images/basic/blue_square.png">
+                <img class="square" src="../../images/basic/blue_square.png">
                 <p class="introduce_one_top"> "ELMP(e起来·云学习管理平台)"简介</p>
             </div>
             <ul type="none">
@@ -69,7 +69,7 @@
 
         <div class="introduce-2 insde_box">
             <div class="introduce_one">
-                <img class="square" src="../../../images/basic/blue_square.png">
+                <img class="square" src="../../images/basic/blue_square.png">
                 <p class="introduce_one_top"> 常见问题</p>
             </div>
             <ul class="" type="none">
