--- a/src/component/main/homepage.ejs
+++ b/src/component/main/homepage.ejs
@@ -19,11 +19,11 @@
             <span class="up">海天国际培训机构</span>
             <div class="down">
                 <span class="text_tt">
-                    <img src="../../../images/main/book.png">
+                    <img src="../../images/main/book.png">
                     <span class="text_down">课程<span class="num">299</span>节</span>
                 </span>
                 <span class="text_tt">
-                    <img src="../../../images/main/teacher.png">
+                    <img src="../../images/main/teacher.png">
                     <span class="text_down">老师<span class="num">99</span>人</span>
                 </span>
              </div>
@@ -39,11 +39,11 @@
             <span class="up">海天国际培训机构</span>
             <div class="down">
                 <span class="text_tt">
-                    <img src="../../../images/main/book.png">
+                    <img src="../../images/main/book.png">
                     <span class="text_down">课程<span class="num">299</span>节</span>
                 </span>
                 <span class="text_tt">
-                    <img src="../../../images/main/teacher.png">
+                    <img src="../../images/main/teacher.png">
                     <span class="text_down">老师<span class="num">99</span>人</span>
                 </span>
             </div>
@@ -59,11 +59,11 @@
             <span class="up">海天国际培训机构</span>
             <div class="down">
                 <span class="text_tt">
-                    <img src="../../../images/main/book.png">
+                    <img src="../../images/main/book.png">
                     <span class="text_down">课程<span class="num">299</span>节</span>
                 </span>
                 <span class="text_tt">
-                    <img src="../../../images/main/teacher.png">
+                    <img src="../../images/main/teacher.png">
                     <span class="text_down">老师<span class="num">99</span>人</span>
                 </span>
             </div>
