--- a/src/component/company/company_home.less
+++ b/src/component/company/company_home.less
@@ -107,7 +107,7 @@
           top: 4.5px;
           width: 16px;
           height: 16px;
-          background: url("../../images/main/tit1.png") no-repeat;
+          background: url("../images/main/tit1.png") no-repeat;
           background-size: 100%;
           @media screen and (max-width: 350px) {
             width: 14px;
@@ -126,7 +126,7 @@
           top: 4.5px;
           width: 16px;
           height: 16px;
-          background: url("../../images/main/tit2.png") no-repeat;
+          background: url("../images/main/tit2.png") no-repeat;
           background-size: 100%;
           @media screen and (max-width: 350px) {
             width: 14px;
@@ -260,6 +260,8 @@
     }
   }
 }
+
+/*机构课程*/
 .company_class{
   font-size: 0;
   background: #ffffff;
@@ -297,7 +299,7 @@
         height: 16px;
         left: 10px;
         top:25%;
-        background: url("../../images/main/choose_min_icon.png") no-repeat;
+        background: url("../images/main/choose_min_icon.png") no-repeat;
         background-size: 100%;
       }
     }
@@ -320,6 +322,9 @@
         //flex: 1;
         display: flex;
         align-items: center;
+        @media screen and (max-width: 414px){
+          width: 76%;
+        }
         img{
           width: 44px;
           height: 44px;
@@ -335,10 +340,22 @@
           justify-content: space-between;
           align-items: flex-start;
           flex-direction: column;
+          @media screen and (max-width: 414px){
+            width: calc(~" 100% - 54px ");
+          }
+          @media screen and (max-width:  350px){
+            width: calc(~" 100% - 44px ");
+          }
           span:first-child{
             font-size: 16px;
             line-height: 20px;
             color: #4a4a4a;
+            display: block;
+            height: 20px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: 100%;
             @media screen and (max-width: 350px){
               font-size: 14px;
             }
@@ -347,6 +364,13 @@
             font-size: 14px;
             line-height: 20px;
             color: #8a8a8a;
+            width: 90%;
+            //height: 40px;
+            overflow: hidden;
+            text-overflow:ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
             @media screen and (max-width: 350px){
               font-size: 12px;
               line-height: 18px;
@@ -382,7 +406,3 @@
 }
 
 
-body{
-  overflow: hidden;
-  width: 100%;
-}
