--- a/src/component/train/employee_training.ejs
+++ b/src/component/train/employee_training.ejs
@@ -12,7 +12,7 @@
 
 <div class="introduce-2">
     <div class="introduce_one">
-        <img class="square" src="../../../images/basic/blue_square.png">
+        <img class="square" src="../../images/basic/blue_square.png">
         <p class="introduce_one_top">员工培训介绍</p>
     </div>
     <ul type="none">
@@ -26,7 +26,7 @@
 </div>
 <div class="introduce-2">
     <div class="introduce_one">
-        <img class="square" src="../../../images/basic/blue_square.png">
+        <img class="square" src="../../images/basic/blue_square.png">
         <p class="introduce_one_top">员工培训使用介绍</p>
     </div>
     <ul type="none">
