--- a/src/component/company/company_home.ejs
+++ b/src/component/company/company_home.ejs
@@ -92,14 +92,14 @@
     <!--二级导航-->
     <div class="company_top_min">
         <!--选中添加class:choose_min-->
-        <span class="min_1 choose_min">战略管理</span>
-        <span class="min_2">营销管理</span>
-        <span class="min_3">人力资源管理</span>
-        <span class="min_4">管理技能提升</span>
-        <span class="min_5">财务管理</span>
-        <span class="min_6">生产管理</span>
-        <span class="min_7">职业素养管理</span>
-        <span class="min_8">客户服务</span>
+        <span class="min_1 choose_min"><img src="../../images/main/choose_min_icon.png" class="choose_icon">战略管理</span>
+        <span class="min_2"><img src="../../images/main/choose_min_icon.png" class="choose_icon">营销管理</span>
+        <span class="min_3"><img src="../../images/main/choose_min_icon.png" class="choose_icon">人力资源管理</span>
+        <span class="min_4"><img src="../../images/main/choose_min_icon.png" class="choose_icon">管理技能提升</span>
+        <span class="min_5"><img src="../../images/main/choose_min_icon.png" class="choose_icon">财务管理</span>
+        <span class="min_6"><img src="../../images/main/choose_min_icon.png" class="choose_icon">生产管理</span>
+        <span class="min_7"><img src="../../images/main/choose_min_icon.png" class="choose_icon">职业素养管理</span>
+        <span class="min_8"><img src="../../images/main/choose_min_icon.png" class="choose_icon">客户服务</span>
     </div>
     <div class="min_box min_1">
         <!--行-->
