--- a/src/component/company/company_home.less
+++ b/src/component/company/company_home.less
@@ -284,23 +284,22 @@
     span{
       text-align: center;
       font-size: 14px;
-      display: inline-block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 5px 10px 5px 10px;
       flex: 1;
+      img{
+        display: none;
+      }
     }
     .choose_min{
-      padding-left: 30px;
+      //padding-left: 30px;
       color: #4e8df4;
-      position: relative;
-      &:after{
-        content: '';
-        position: absolute;
+      .choose_icon{
+        display: inline-block;
         width: 16px;
         height: 16px;
-        left: 10px;
-        top:25%;
-        background: url("../images/main/choose_min_icon.png") no-repeat;
-        background-size: 100%;
       }
     }
   }
@@ -351,10 +350,12 @@
             line-height: 20px;
             color: #4a4a4a;
             display: block;
-            height: 20px;
+            //height: 20px;
             overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
+            text-overflow:ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
             width: 100%;
             @media screen and (max-width: 350px){
               font-size: 14px;
